add swiftlint & run swiftlint for first time

--- a/project.json
+++ b/project.json
@@ -79,6 +79,12 @@
 		"MobileApp":{
 			"templates":[
 				"BaseApp"
+			],
+			"preBuildScripts": [
+				{
+					"name": "Swiftlint",
+					"path": "Scripts/swiftlint.sh"
+				}
 			]
 		},
 		"MobileAppTests":{
