--- a/project.json
+++ b/project.json
@@ -4,6 +4,14 @@
 		"templates.json"
 	],
 	"name": "JourneySpendings",
+	"configs": {
+		"Dev": "debug",
+		"Prod": "release"
+	},
+	"configFiles": {
+		"Dev": "Settings/Dev.xcconfig",
+		"Prod": "Settings/Prod.xcconfig"
+	},
 	"options": {
 		"bundleIdPrefix": "pl.msut",
 		"deploymentTarget": {
