--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Select xcode
+        run: sudo xcode-select -s "/Applications/Xcode_13.0.app"
       - name: Install xcodegen
         run: |
           brew install xcodegen
@@ -34,6 +36,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Select xcode
+        run: sudo xcode-select -s "/Applications/Xcode_13.0.app"
       - name: Install xcodegen
         run: |
           brew install xcodegen
